<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/colorPrimary"
    tools:context="com.example.user.blogga.Activities.LoginActivity">


    <ImageView
        android:id="@+id/bloga_auth_logo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/app_name"
        android:scaleType="centerCrop"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_support"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_address_layout"
        android:layout_marginTop="140dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/hint_color"
        >
        <EditText
            android:id="@+id/email_address"
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:layout_height="match_parent"
            android:hint="@string/email_address"
            android:backgroundTint="#000"
            android:textColor="#000"

            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_below="@+id/email_address_layout"
        android:layout_height="wrap_content"
        >
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"

            android:inputType="textPassword"
            android:textColorHint="@color/hint_color"
            android:backgroundTint="#000"
            android:textColor="#000"

            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/password_layout"
        android:background="@drawable/buttonbg"
        android:layout_marginTop="30dp"
        android:textSize="16sp"
        android:text="@string/sign_in_two"
        android:textColor="#ffffff"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/need_a_new_account_sign_up"
        android:textSize="15sp"
        android:gravity="center"
        android:padding="6dp"
        android:layout_alignParentBottom="true"
        android:textColor="@android:color/black"
        android:background="@drawable/share_option_bg"/>

</RelativeLayout>